[project]
name = "dupimage"
version = "0.0.1"
authors = [
  { name="Francesco Di Baldassarre", email="f.dibaldassarre@gmail.com" },
]
description = "Find duplicate images"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "imagehash>=4.3.2",
    "numpy>=1.21.6",
    "pillow>=9.5.0",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
